--- a/_posts/2015-03-15-em1.md
+++ b/_posts/2015-03-15-em1.md
@@ -11,7 +11,7 @@ toc:
   sidebar: left
 ---
 
-Download full version of this notes with more details and images <a href="">here</a>.
+Download full version of this notes with more details and images <a href="{{ 'M3.pdf' | prepend: 'assets/pdf/' | relative_url }}">here</a>.
 
 ## Efficient Methods
 The energy is mainly consumed in DNNs by data transferring(in memory), and MAC(Multiplication & Accumulation) operations. In order to reduce the energy consumption, we need methods or models that reducing the cost of memory and compute in DNNs, that is, the Neural Network Compression.
