--- a/_posts/2015-03-15-em2.md
+++ b/_posts/2015-03-15-em2.md
@@ -4,13 +4,14 @@ title: Study on Efficient Models 2
 date: 2022-10-28 11:59:00-0400
 description: Walkthrough more SOTA compact models.
 categories: studynote
+tags: images, links, math
 disqus_comments: true
 related_posts: false
 toc:
   sidebar: left
 ---
 
-Download full version of this notes with more details and images <a href="">here</a>.
+Download full version of this notes with more details and images <a href="{{ 'Notes.pdf' | prepend: 'assets/pdf/' | relative_url }}">here</a>.
 
 ## EfficientNet V1 (2019)
 ### Idea & Background
