--- a/_posts/2015-03-15-rl1.md
+++ b/_posts/2015-03-15-rl1.md
@@ -4,13 +4,14 @@ title: Reinforcement Learning Basics
 date: 2022-10-30 11:59:00-0400
 description: Reinforcement Learning Note. [Model-based | Model-free Value-based | Model-free Policy-based | AC | Continuous Action Space]
 categories: studynote
+tags: images, links, math
 disqus_comments: true
 related_posts: false
 toc:
   sidebar: left
 ---
 
-Download full version of this notes with more details and images <a href="">here</a>.
+Download full version of this notes with more details and images <a href="{{ 'Notes.pdf' | prepend: 'assets/pdf/' | relative_url }}">here</a>.
 
 # Reinforcement Learning
 
