--- a/_posts/2015-03-15-rl2.md
+++ b/_posts/2015-03-15-rl2.md
@@ -4,14 +4,13 @@ title: Advanced Reinforcement Learning
 date: 2022-11-08 11:59:00-0400
 description: PPO, AC
 categories: studynote
-tags: images, links, math
+tags: images, math
 disqus_comments: true
 related_posts: false
 toc:
   sidebar: left
 ---
 
-Download full version of this notes with more details and images <a href="">here</a>.
 
 ## Advanced Reinforcement Learning
 ### 1.1 Actor-Critic Reinforcement Learning
