--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,5 +15,6 @@
     preview={dita.gif},
     selected={true},
     code={https://github.com/HuskyKingdom/DITA_acml2023},
+    html={https://arxiv.org/pdf/2309.16164v1.pdf},
     abstract = {This paper addresses the critical challenge of object navigation in autonomous navigation systems, particularly focusing on the problem of target approach and episode termination in environments with long optimal episode length in Deep Reinforcement Learning (DRL) based methods. While effective in environment exploration and object localization, conventional DRL methods often struggle with optimal path planning and termination recognition due to a lack of depth information. To overcome these limitations, we propose a novel approach, namely the Depth-Inference Termination Agent (DITA), which incorporates a supervised model called the Judge Model to implicitly infer object-wise depth and decide termination jointly with reinforcement learning. We train our judge model along with reinforcement learning in parallel and supervise the former efficiently by reward signal. Our evaluation shows the method is demonstrating superior performance, we achieve a 9.3 perct. gain on success rate than our baseline method across all room types and gain 51.2 perct. improvements on long episodes environment while maintaining slightly better Success Weighted by Path Length(SPL). Code and resources, visualization are available at: https://github.com/HuskyKingdom/DITA_acml2023}
 }
